# SSAFY-BOB-MCP

./: .gitignore  README.md  pyproject.toml  smithery.yaml  test.py
src/bob_server/: data_fetcher.py  server.py
